fix issue with top overlapping with nav bar

--- a/css/products.css
+++ b/css/products.css
@@ -7,7 +7,21 @@
                             /* For Mobile*/
 /*-------------------------------------------------------------------*/
 
+* {
+  box-sizing: border-box;
+}
 
+#prodbody{
+	padding:10px;
+	background-color:#00BFFF;
+	text-align: center;
+}
+
+.columns {
+  float: left;
+  width: 33.3%;
+  padding: 8px;
+}
 
 
 /*-------------------------------------------------------------------*/
@@ -29,7 +43,7 @@
 @media only screen and (min-width: 600px) {
 
 
-}
+
 /*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*/
 
